# graphics_template

./: .clang-format  .dir-locals.el  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Display.cpp  Display.hpp
lib/oogl/: Buffer.hpp  CMakeLists.txt  Program.cpp  Program.hpp  VertexArray.cpp  VertexArray.hpp  oogl.hpp
resources/: shader.frag
